# _Posting_

./: .gitignore  Dockerfile  Makefile  README.dm  README.md  docker-compose.yml  env.dev  pyproject.toml
.github/workflows/: build.yml  workflow_pr.yml
core/: settings.py  urls.py
core/Posting/: apps.py
core/posting/: __init__.py  admin.py  apps.py  auth_urls.py  factories.py  forms.py  urls.py  user_urls.py
core/posting/migrations/: 0001_initial.py  0002_alter_post_slug.py  0002_alter_profile_options.py  0002_alter_user_avatar.py  0002_alter_user_birthday.py  0002_rename_user_profile_email.py  0002_rename_useravatar_profilepicture.py  0003_alter_post_author.py  0003_alter_profilepicture_user.py  0003_alter_user_avatar.py  0003_alter_user_sex.py  0004_alter_post_image_content.py  0004_alter_profilepicture_user.py  0004_rename_age_profile_birthday.py  0005_alter_comment_post_alter_post_author.py  0006_alter_relation_followed_alter_relation_follower.py  0007_alter_relation_follower.py  0008_alter_relation_followed_alter_relation_follower.py  0009_alter_relation_followed_alter_relation_follower.py  0010_alter_relation_followed_alter_relation_follower.py  0012_like.py  (+3 more)
templates/: base.html  edit_post.html  edit_user.html  explore.html  feed.html  find_friend.html  friends_list.html  landingpage.html  login.html  post_detail.html  profile.html  remove_picture.html  sign_up.html  teste.html  user_config.html  user_detail.html
tests/: test_comment.py  test_post.py  test_postviewset.py  test_profile.py  test_relations.py  test_user.py  test_userviewset.py
(+43 files in other folders)
